@@ -4,4 +4,6 @@ Makefile.PL
 MANIFEST			This list of files
 META.yml
 README
+t/02pod.t
+t/03podcoverage.t
 t/10base.t
